Added old_hindu_lunar calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(as_icelandic)
 export(as_islamic)
 export(as_iso)
 export(as_julian)
+export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
 export(as_roman)
 export(as_time_of_day)
@@ -71,6 +72,7 @@ export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
 export(cal_julian)
+export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
 export(cal_roman)
 export(chinese_date)
@@ -108,6 +110,7 @@ export(month_of_year)
 export(naw_ruz)
 export(new_date)
 export(new_moons)
+export(old_hindu_lunar_date)
 export(old_hindu_solar_date)
 export(orthodox_christmas)
 export(orthodox_easter)
