Added Egyptian and Armenian calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,11 +40,14 @@ S3method(vec_ptype_abbr,calcalvec)
 S3method(vec_ptype_abbr,location)
 export(advent)
 export(alt_orthodox_easter)
+export(armenian_date)
+export(as_armenian)
 export(as_bahai)
 export(as_balinese)
 export(as_chinese)
 export(as_coptic)
 export(as_date)
+export(as_egyptian)
 export(as_ethiopic)
 export(as_gregorian)
 export(as_hebrew)
@@ -60,11 +63,13 @@ export(bahai_date)
 export(bahai_new_year)
 export(balinese_date)
 export(birth_of_the_bab)
+export(cal_armenian)
 export(cal_bahai)
 export(cal_balinese)
 export(cal_calendar)
 export(cal_chinese)
 export(cal_coptic)
+export(cal_egyptian)
 export(cal_ethiopic)
 export(cal_gregorian)
 export(cal_hebrew)
@@ -86,6 +91,7 @@ export(day_of_year)
 export(days_remaining)
 export(dragon_festival)
 export(easter)
+export(egyptian_date)
 export(eid_al_adha)
 export(eid_al_fitr)
 export(epiphany)
