Added French revolutionary calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,8 +39,10 @@ S3method(vec_ptype2,time_of_day.time_of_day)
 S3method(vec_ptype_abbr,calcalvec)
 S3method(vec_ptype_abbr,location)
 export(advent)
+export(afrench_date)
 export(alt_orthodox_easter)
 export(armenian_date)
+export(as_afrench)
 export(as_armenian)
 export(as_bahai)
 export(as_balinese)
@@ -49,6 +51,7 @@ export(as_coptic)
 export(as_date)
 export(as_egyptian)
 export(as_ethiopic)
+export(as_french)
 export(as_gregorian)
 export(as_hebrew)
 export(as_icelandic)
@@ -63,6 +66,7 @@ export(bahai_date)
 export(bahai_new_year)
 export(balinese_date)
 export(birth_of_the_bab)
+export(cal_afrench)
 export(cal_armenian)
 export(cal_bahai)
 export(cal_balinese)
@@ -71,6 +75,7 @@ export(cal_chinese)
 export(cal_coptic)
 export(cal_egyptian)
 export(cal_ethiopic)
+export(cal_french)
 export(cal_gregorian)
 export(cal_hebrew)
 export(cal_icelandic)
@@ -97,6 +102,7 @@ export(eid_al_fitr)
 export(epiphany)
 export(ethiopic_date)
 export(feast_of_ridvan)
+export(french_date)
 export(full_moons)
 export(granularity)
 export(granularity_names)
