Updated day_of_week to be a method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,17 @@ S3method(as_time_of_day,POSIXlt)
 S3method(as_time_of_day,calcalvec)
 S3method(as_time_of_day,default)
 S3method(as_time_of_day,numeric)
+S3method(day_of_week,bahai)
+S3method(day_of_week,coptic)
+S3method(day_of_week,default)
+S3method(day_of_week,ethiopic)
+S3method(day_of_week,french)
+S3method(day_of_week,gregorian)
+S3method(day_of_week,hebrew)
+S3method(day_of_week,icelandic)
+S3method(day_of_week,islamic)
+S3method(day_of_week,iso)
+S3method(day_of_week,julian)
 S3method(format,calcalvec)
 S3method(format,location)
 S3method(format,time_of_day)
