Added Persian calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(as_time_of_day,POSIXlt)
 S3method(as_time_of_day,calcalvec)
 S3method(as_time_of_day,default)
 S3method(as_time_of_day,numeric)
+S3method(day_of_week,apersian)
 S3method(day_of_week,bahai)
 S3method(day_of_week,coptic)
 S3method(day_of_week,default)
@@ -26,6 +27,7 @@ S3method(day_of_week,icelandic)
 S3method(day_of_week,islamic)
 S3method(day_of_week,iso)
 S3method(day_of_week,julian)
+S3method(day_of_week,persian)
 S3method(format,calcalvec)
 S3method(format,location)
 S3method(format,time_of_day)
@@ -52,8 +54,10 @@ S3method(vec_ptype_abbr,location)
 export(advent)
 export(afrench_date)
 export(alt_orthodox_easter)
+export(apersian_date)
 export(armenian_date)
 export(as_afrench)
+export(as_apersian)
 export(as_armenian)
 export(as_bahai)
 export(as_balinese)
@@ -71,6 +75,7 @@ export(as_iso)
 export(as_julian)
 export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
+export(as_persian)
 export(as_roman)
 export(as_time_of_day)
 export(bahai_date)
@@ -78,6 +83,7 @@ export(bahai_new_year)
 export(balinese_date)
 export(birth_of_the_bab)
 export(cal_afrench)
+export(cal_apersian)
 export(cal_armenian)
 export(cal_bahai)
 export(cal_balinese)
@@ -95,6 +101,7 @@ export(cal_iso)
 export(cal_julian)
 export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
+export(cal_persian)
 export(cal_roman)
 export(chinese_date)
 export(chinese_new_year)
@@ -139,6 +146,7 @@ export(orthodox_christmas)
 export(orthodox_easter)
 export(passover)
 export(pentecost)
+export(persian_date)
 export(purim)
 export(qing_ming)
 export(ramadan)
