Added Mayan dates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(as_icelandic)
 export(as_islamic)
 export(as_iso)
 export(as_julian)
+export(as_mayan)
 export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
 export(as_persian)
@@ -99,6 +100,7 @@ export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
 export(cal_julian)
+export(cal_mayan)
 export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
 export(cal_persian)
@@ -136,6 +138,7 @@ export(kajeng_keliwon)
 export(location)
 export(lunar_phase)
 export(mawlid)
+export(mayan_date)
 export(month_of_year)
 export(naw_ruz)
 export(new_date)
