Added Japanese, Korean and Vietnamese calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,13 +72,16 @@ export(as_hebrew)
 export(as_icelandic)
 export(as_islamic)
 export(as_iso)
+export(as_japanese)
 export(as_julian)
+export(as_korean)
 export(as_mayan)
 export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
 export(as_persian)
 export(as_roman)
 export(as_time_of_day)
+export(as_vietnamese)
 export(bahai_date)
 export(bahai_new_year)
 export(balinese_date)
@@ -99,12 +102,15 @@ export(cal_hebrew)
 export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
+export(cal_japanese)
 export(cal_julian)
+export(cal_korean)
 export(cal_mayan)
 export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
 export(cal_persian)
 export(cal_roman)
+export(cal_vietnamese)
 export(chinese_date)
 export(chinese_new_year)
 export(christmas)
@@ -133,8 +139,10 @@ export(icelandic_date)
 export(islamic_date)
 export(islamic_new_year)
 export(iso_date)
+export(japanese_date)
 export(julian_date)
 export(kajeng_keliwon)
+export(korean_date)
 export(location)
 export(lunar_phase)
 export(mawlid)
@@ -170,6 +178,7 @@ export(us_election_day)
 export(us_independence_day)
 export(us_labor_day)
 export(us_memorial_day)
+export(vietnamese_date)
 export(week_of_month)
 export(week_of_year)
 export(year)
