Added Tibetan calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
 export(as_persian)
 export(as_roman)
+export(as_tibetan)
 export(as_time_of_day)
 export(as_vietnamese)
 export(bahai_date)
@@ -144,6 +145,7 @@ export(julian_date)
 export(kajeng_keliwon)
 export(korean_date)
 export(location)
+export(losar)
 export(lunar_phase)
 export(mawlid)
 export(mayan_date)
@@ -168,6 +170,8 @@ export(sukkot)
 export(sunrise)
 export(sunset)
 export(ta_anit_esther)
+export(tibetan_date)
+export(tibetan_new_year)
 export(time_of_day)
 export(tishah_be_av)
 export(tumpek)
