Added babylonian calendar (not yet working)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(armenian_date)
 export(as_afrench)
 export(as_apersian)
 export(as_armenian)
+export(as_babylonian)
 export(as_bahai)
 export(as_balinese)
 export(as_chinese)
@@ -83,6 +84,7 @@ export(as_roman)
 export(as_tibetan)
 export(as_time_of_day)
 export(as_vietnamese)
+export(babylonian_date)
 export(bahai_date)
 export(bahai_new_year)
 export(balinese_date)
@@ -90,6 +92,7 @@ export(birth_of_the_bab)
 export(cal_afrench)
 export(cal_apersian)
 export(cal_armenian)
+export(cal_babylonian)
 export(cal_bahai)
 export(cal_balinese)
 export(cal_calendar)
