Still working on moonset and moonrise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,8 @@ export(lunar_phase)
 export(mawlid)
 export(mayan_date)
 export(month_of_year)
+export(moonrise)
+export(moonset)
 export(naw_ruz)
 export(new_date)
 export(new_moons)
