--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,10 +109,12 @@ export(cal_japanese)
 export(cal_julian)
 export(cal_korean)
 export(cal_mayan)
+export(cal_oislamic)
 export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
 export(cal_persian)
 export(cal_roman)
+export(cal_saudi)
 export(cal_vietnamese)
 export(chinese_date)
 export(chinese_new_year)
