Added observational hebrew and samaritan calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,11 +109,13 @@ export(cal_japanese)
 export(cal_julian)
 export(cal_korean)
 export(cal_mayan)
+export(cal_ohebrew)
 export(cal_oislamic)
 export(cal_old_hindu_lunar)
 export(cal_old_hindu_solar)
 export(cal_persian)
 export(cal_roman)
+export(cal_samaritan)
 export(cal_saudi)
 export(cal_vietnamese)
 export(chinese_date)
