--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(as_roman)
 export(as_tibetan)
 export(as_time_of_day)
 export(as_vietnamese)
+export(astronomical_easter)
 export(babylonian_date)
 export(bahai_date)
 export(bahai_new_year)
