Started on modern Hindu calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,8 @@ export(as_ethiopic)
 export(as_french)
 export(as_gregorian)
 export(as_hebrew)
+export(as_hindu_lunar)
+export(as_hindu_solar)
 export(as_icelandic)
 export(as_islamic)
 export(as_iso)
@@ -103,6 +105,8 @@ export(cal_ethiopic)
 export(cal_french)
 export(cal_gregorian)
 export(cal_hebrew)
+export(cal_hindu_lunar)
+export(cal_hindu_solar)
 export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
@@ -143,6 +147,7 @@ export(granularity_names)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
+export(hindu_solar_date)
 export(icelandic_date)
 export(islamic_date)
 export(islamic_new_year)
