Added Hindu holidays

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -104,10 +104,14 @@ reference:
     contents:
       - mayan_date
       - as_mayan
-  - title: Old Hindu calendars
+  - title: Hindu calendars
     contents:
+      - hindu_solar_date
+      - hindu_lunar_date
       - old_hindu_solar_date
       - old_hindu_lunar_date
+      - as_hindu_solar
+      - as_hindu_lunar
       - as_old_hindu_solar
       - as_old_hindu_lunar
   - title: Persian calendar
@@ -134,6 +138,7 @@ reference:
       - bahai_new_year
       - kajeng_keliwon
       - losar
+      - diwali
   - title: Granularities
     contents:
       - granularity
