--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,9 +34,13 @@ S3method(format,time_of_day)
 S3method(obj_print_header,calcalvec)
 S3method(print,calcal)
 S3method(vec_arith,calcalvec)
+S3method(vec_arith,time_of_day)
 S3method(vec_arith.calcalvec,calcalvec)
 S3method(vec_arith.calcalvec,numeric)
 S3method(vec_arith.numeric,calcalvec)
+S3method(vec_arith.numeric,time_of_day)
+S3method(vec_arith.time_of_day,numeric)
+S3method(vec_arith.time_of_day,time_of_day)
 S3method(vec_cast,calcalvec.calcalvec)
 S3method(vec_cast,calcalvec.double)
 S3method(vec_cast,double.calcalvec)
@@ -132,6 +136,7 @@ export(day_of_month)
 export(day_of_week)
 export(day_of_year)
 export(days_remaining)
+export(diwali)
 export(dragon_festival)
 export(easter)
 export(egyptian_date)
@@ -161,6 +166,7 @@ export(losar)
 export(lunar_phase)
 export(mawlid)
 export(mayan_date)
+export(mesha_samkranti)
 export(month_of_year)
 export(moonrise)
 export(moonset)
@@ -176,10 +182,13 @@ export(pentecost)
 export(persian_date)
 export(purim)
 export(qing_ming)
+export(rama)
 export(ramadan)
 export(roman_date)
 export(rosh_hashanah)
+export(sacred_wednesdays)
 export(shavuot)
+export(shiva)
 export(sukkot)
 export(sunrise)
 export(sunset)
