Added Hindu holidays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(granularity_names)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
+export(hindu_lunar_new_year)
 export(hindu_solar_date)
 export(icelandic_date)
 export(islamic_date)
