Fixing errors in the Hindu calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,7 +167,7 @@ export(losar)
 export(lunar_phase)
 export(mawlid)
 export(mayan_date)
-export(mesha_samkranti)
+export(mesha_sankranti)
 export(month_of_year)
 export(moonrise)
 export(moonset)
