--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(cal_persian)
 export(cal_roman)
 export(cal_samaritan)
 export(cal_saudi)
+export(cal_tibetan)
 export(cal_vietnamese)
 export(chinese_date)
 export(chinese_new_year)
