Added Tibetan DOW

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(day_of_week,islamic)
 S3method(day_of_week,iso)
 S3method(day_of_week,julian)
 S3method(day_of_week,persian)
+S3method(day_of_week,tibetan)
 S3method(format,calcalvec)
 S3method(format,location)
 S3method(format,time_of_day)
