Renamed cal_calendar to new_calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,7 +102,6 @@ export(cal_armenian)
 export(cal_babylonian)
 export(cal_bahai)
 export(cal_balinese)
-export(cal_calendar)
 export(cal_chinese)
 export(cal_coptic)
 export(cal_egyptian)
@@ -174,6 +173,7 @@ export(month_of_year)
 export(moonrise)
 export(moonset)
 export(naw_ruz)
+export(new_calendar)
 export(new_date)
 export(new_moons)
 export(old_hindu_lunar_date)
