--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ S3method(format,location)
 S3method(format,rdvec)
 S3method(format,time_of_day)
 S3method(obj_print_header,rdvec)
-S3method(print,calcal)
+S3method(print,calendar)
 S3method(vec_arith,rdvec)
 S3method(vec_arith,time_of_day)
 S3method(vec_arith.numeric,rdvec)
