Fixed casting problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(vec_cast,double.rdvec)
 S3method(vec_cast,double.time_of_day)
 S3method(vec_cast,integer.rdvec)
 S3method(vec_cast,rdvec.double)
+S3method(vec_cast,rdvec.integer)
 S3method(vec_cast,rdvec.rdvec)
 S3method(vec_ptype2,double.rdvec)
 S3method(vec_ptype2,integer.rdvec)
