Added missing exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,10 +84,14 @@ export(as_japanese)
 export(as_julian)
 export(as_korean)
 export(as_mayan)
+export(as_ohebrew)
+export(as_oislamic)
 export(as_old_hindu_lunar)
 export(as_old_hindu_solar)
 export(as_persian)
 export(as_roman)
+export(as_samaritan)
+export(as_saudi)
 export(as_tibetan)
 export(as_time_of_day)
 export(as_vietnamese)
@@ -177,6 +181,8 @@ export(naw_ruz)
 export(new_calendar)
 export(new_date)
 export(new_moons)
+export(ohebrew_date)
+export(oislamic_date)
 export(old_hindu_lunar_date)
 export(old_hindu_solar_date)
 export(orthodox_christmas)
@@ -191,6 +197,8 @@ export(ramadan)
 export(roman_date)
 export(rosh_hashanah)
 export(sacred_wednesdays)
+export(samaritan_date)
+export(saudi_date)
 export(shavuot)
 export(shiva)
 export(sukkot)
